k8s /backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  type: NodePort   # ✅ خليه ClusterIP بدل NodePort
  ports:
    - protocol: TCP
      port: 8080       # البورت اللي يكشفه السيرفس
      targetPort: 8080 # البورت داخل البود
      nodePort: 30101   # ✅ البورت الخارجي (تتأكدي أنه ما يتصادم مع شيء ثاني)
