k8s /frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  type: NodePort   # ✅ خليه ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80         # البورت اللي ينكشف داخليًا
      targetPort: 80   # البورت داخل البود
      nodePort: 30100 # ✅ البورت الخارجي (يفتح للمتصفح)
