k8s /ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fullstackapp-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: FullStackApp.com   # 👈 هذا نفس الاسم اللي حطيتيه في hosts
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /customers
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
